# COMP7107_management_of_complex_data_types

./: .gitignore  CMakeLists.txt  README.MD  setup.bat  setup.command  setup.sh
.github/workflows/: cmake-multi-platform.yml  cmake_build_linux.yml  cmake_build_macos.yml  cmake_build_windows.yml
docs/assignment2/: Beijing_restaurants.txt
src/assignment1/: CMakeLists.txt  assignment1.cpp  assignment1.hpp
src/assignment2/: CMakeLists.txt  assignment2.cpp  assignment2.hpp  assignment2.part1.cpp  assignment2.part2.cpp  assignment2.part3.cpp
src/assignment3/: CMakeLists.txt  assignment3.hpp  assignment3.part1.cpp  assignment3.part2.cpp
